<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailCalon">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="@dimen/margin" />

        <TextView
            android:id="@+id/no_urut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginRight="1dp"
            android:layout_toRightOf="@id/img_view"
            android:text="No Urut"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"/>


        <TextView
            android:id="@+id/txt_namacalon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginTop="40dp"
            android:layout_marginRight="1dp"
            android:layout_toRightOf="@id/img_view"
            android:text="@string/namacalon"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_prodi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_namacalon"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginRight="1dp"
            android:layout_toRightOf="@id/img_view"
            android:text="@string/prodicalon" />
        <TextView
            android:id="@+id/txt_angkatan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_namacalon"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginTop="40dp"
            android:layout_marginRight="1dp"
            android:layout_toRightOf="@id/img_view"
            android:text="@string/angkatancalon" />

    </RelativeLayout>


    <TextView
        android:id="@+id/tv_detail_panjang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_margin="@dimen/margin"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin">

        <TextView
            android:id="@+id/visi"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="Visi"
            android:layout_margin="@dimen/margin"/>

        <TextView
            android:id="@+id/tv_visi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/visi"
            android:layout_margin="@dimen/margin"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/misi"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="Misi"
            android:layout_margin="@dimen/margin"/>

        <TextView
            android:id="@+id/tv_misi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/misi"
            android:layout_margin="@dimen/margin"/>

    </RelativeLayout>


</LinearLayout>